# Hopper

./: .editorconfig  .gitignore  Makefile  README.md  docker-compose.yml
docs/: ARCHITECTURE.md  E2E_TESTING.md  TASKS.md  TECH_STACK.md  TESTING_PLAN.md
frontend/: Dockerfile  package.json  pnpm-lock.yaml  vite.config.ts
infrastructure/argocd/: app-of-apps.yaml
infrastructure/pulumi/: Pulumi.dev.yaml  Pulumi.yaml  __main__.py  requirements.txt
k8s/base/: namespaces.yaml  rbac.yaml
k8s/gpu-operator/: values.yaml
k8s/kai-scheduler/: values.yaml
k8s/kueue/: resource-flavors.yaml
k8s/network-policies/: default-deny.yaml
observability/loki/: loki-config.yml
observability/prometheus/: prometheus.yml
proto/: buf.yaml
scripts/: dev-setup.sh  generate-proto.sh
services/api-gateway/: Dockerfile  alembic.ini  pyproject.toml
services/api-gateway/alembic/: env.py
services/api-gateway/alembic/versions/: 001_initial_schema.py  002_fix_pod_session_and_user.py
services/api-gateway/app/: config.py  dependencies.py  main.py
services/api-gateway/app/core/: logging.py
services/api-gateway/app/middleware/: auth.py
services/api-gateway/app/models/: __init__.py  credit_ledger.py  session.py  user.py
services/api-gateway/app/routers/: admin.py  auth.py  credits.py  pods.py
services/api-gateway/app/schemas/: credit.py  pod.py  user.py
services/api-gateway/app/services/: credit_service.py
services/orchestrator/: Dockerfile  go.mod  go.sum
tests/chaos/: kill-gpu-pod.yaml
tests/e2e/: playwright.config.ts
tests/integration/: conftest.py
(+37 files in other folders)
